CONTRIB: hpack: add a compressed stream generator for the encoder
This generates the tables and indexes which will be used by the HPACK
encoder. The headers are sorted by length, then by statistical frequency,
then by direction (preference for responses), then by name, then by index.
The purpose is to speed up their lookup.

--- a/contrib/hpack/Makefile
+++ b/contrib/hpack/Makefile
@@ -1,5 +1,5 @@
 CFLAGS = -O2 -Wall -g -I../../include -I../../ebtree -fwrapv -fno-strict-aliasing
-OBJS = gen-rht decode
+OBJS = gen-rht gen-enc decode
 
 all: $(OBJS)
 
