--- a/.travis.yml
+++ b/.travis.yml
@@ -24,34 +24,34 @@ matrix:
   include:
   - os: linux
     compiler: gcc
-    env: TARGET=linux2628 FIFTYONEDEGREES_SRC="contrib/51d/src/trie"
+    env: TARGET=linux-glibc FIFTYONEDEGREES_SRC="contrib/51d/src/trie"
   - os: linux-ppc64le
     compiler: gcc
-    env: TARGET=linux2628 OPENSSL_VERSION=1.1.1c LABEL="linux-ppc64le"
+    env: TARGET=linux-glibc OPENSSL_VERSION=1.1.1c LABEL="linux-ppc64le"
   - os: linux
     compiler: clang
-    env: TARGET=linux2628 OPENSSL_VERSION=1.1.1c
+    env: TARGET=linux-glibc OPENSSL_VERSION=1.1.1c
   - os: linux
     compiler: clang
-    env: TARGET=linux2628 OPENSSL_VERSION=1.1.0j
+    env: TARGET=linux-glibc OPENSSL_VERSION=1.1.0j
   - os: linux
     compiler: clang
-    env: TARGET=linux2628 OPENSSL_VERSION=1.0.2r
+    env: TARGET=linux-glibc OPENSSL_VERSION=1.0.2r
   - os: linux
     compiler: clang
-    env: TARGET=linux2628 LIBRESSL_VERSION=2.9.2
+    env: TARGET=linux-glibc LIBRESSL_VERSION=2.9.2
   - os: linux
     compiler: clang
-    env: TARGET=linux2628 LIBRESSL_VERSION=2.8.3
+    env: TARGET=linux-glibc LIBRESSL_VERSION=2.8.3
   - os: linux
     compiler: clang
-    env: TARGET=linux2628 LIBRESSL_VERSION=2.7.5 EXTRA_OBJS="contrib/prometheus-exporter/service-prometheus.o"
+    env: TARGET=linux-glibc LIBRESSL_VERSION=2.7.5 EXTRA_OBJS="contrib/prometheus-exporter/service-prometheus.o"
   - os: linux
     compiler: clang
-    env: TARGET=linux2628 BORINGSSL=yes
+    env: TARGET=linux-glibc BORINGSSL=yes
   - os: linux
     compiler: clang
-    env: TARGET=linux2628 FLAGS=
+    env: TARGET=linux-glibc FLAGS=
   - os: osx
     compiler: clang
     env: TARGET=osx FLAGS="USE_OPENSSL=1" OPENSSL_VERSION=1.1.1c
